ecmascript/parser/tests/test262-error-references/fail/ef81b93cf9bdb4ec.js.stderr
error: Class property requires `jsc.parser.classProperty` to be true
 --> $DIR/tests/test262-parser/fail/ef81b93cf9bdb4ec.js:1:9
  |
1 | (class {a=0})
  |         ^

